--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
     "version": 2,
-    "name": "code-spot-server",    
+    "name": "code-spot-server",
+    "builds": [
+       { "src": "server/src/server.js", "use": "@vercel/node" }
+    ],
     "routes": [
        { "src": "/(.*)", "dest": "/server/src/server.js" }
     ]
