--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "name": "code-spot-server",
     "builds": [
-       { "src": "*.js", "use": "@vercel/node" }
+       { "src": "server/src/server.js", "use": "@vercel/node" }
     ],
     "routes": [
        { "src": "/(.*)", "dest": "/server/src/server.js" }
